# ADSC21

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
notebooks/: 00_help_create_data.ipynb  01_Datenverständnis.ipynb  02_Datenbereinigung.ipynb  03_EDA.ipynb  04_Feature_Engineering.ipynb  05_Modelling.ipynb  1_first_look.ipynb  first_look_data.ipynb
scripts/: 0_get_all_data.py  1_create_data.py  create_data.py  get_data.py
